tests/test134.rael.exp
Error [tests/test134.rael:1:17]: Substring out of range
| log "string" at (1 to 100)
|                 ^
